fix: apply overflow auto on list-item (#696)

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -69,7 +69,7 @@
   max-width: 12rem;
   margin: 0.2rem 0;
   padding: 0.4rem 0.8rem;
-  overflow: scroll;
+  overflow: auto;
 
   color: var(--color-text);
   font-size: 1rem;
